# carver

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
carver/: cli.py
carver/backends/: __init__.py
carver/backends/supabase/: __init__.py  cli.py
carver/backends/supabase/commands/: __init__.py  artifact.py  artifact_manager.py  entity.py  item.py  item_manager.py  post.py  post_manager.py  project.py  source.py  source_manager.py  spec.py  templates.py
carver/backends/supabase/commands/templates/: exa.py  knowledge_graph.py  youtube.py
carver/backends/supabase/templates/: source_exa_papers.py  source_exa_search.py  spec_exa.py  spec_exa_blogs.py  spec_exa_papers.py  spec_exa_solution.py  spec_exa_usecases.py  spec_knowledge_graph.py  spec_youtube.py
carver/backends/supabase/utils/: __init__.py  db.py  helpers.py  urlparser.py
carver/feeds/: __init__.py  base.py  exasearch.py  github.py  podcast.py  rss.py  substack.py  youtube.py
carver/generators/: __init__.py  base.py  cli.py  exa_content.py  knowledgegraph.py  llm.py  sample.py  summary.py  thread.py  transcription.py
carver/llm/: __init__.py
carver/utils/: __init__.py
tests/: conftest.py
