[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 0

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.package_data]
carver = py.typed

[options.packages.find]
exclude =
    tests*
    testing*

[coverage:run]
source = carver
omit = tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

